bin/tests/errors/sema/sema_err_operator_generation_generic_field_unsupported_equals.swg
#global fileprivate

struct MissingGenericEqualsField
{
    value: s32
}

#[Swag.Operators(opEquals)]
struct(T) GeneratedGenericNeedsFieldEquals
{
    field: T // swc-expected-error {{sema_err_operator_generation_field_unsupported}}
}

var trigger: GeneratedGenericNeedsFieldEquals'MissingGenericEqualsField
